in calender: add user (alave bar staff)
